# kikko

./: .dockerignore  .tmp-tailwind-out.css  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
.cursor/rules/: kikko-bible.md
.github/workflows/: ci.yml  release.yml
docs/: cross-platform-parity.md
plugins-builtin/: README.md
plugins-builtin/calculator-history/: manifest.json
plugins-builtin/emoji-picker/: manifest.json
plugins-builtin/json-tools/: manifest.json
plugins-builtin/quick-links/: manifest.json
plugins-builtin/uuid-generator/: manifest.json
scripts/: gen-icon-ico.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-app-invoke.toml
src-tauri/src/: alt_space.rs  main.rs
src-tauri/src/commands/: apps.rs  clipboard.rs  files.rs  mod.rs  plugins.rs  quicklinks.rs  snippets.rs  system.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src/components/: palette-icons.tsx
src/data/: emoji-data.ts
src/lib/: clipboard-polling.ts  constants.ts  platform.ts  strings.ts  tauri.ts  use-global-shortcuts.ts  use-tray.ts  window-navigation.ts
src/routes/: dashboard.tsx  palette.tsx  settings.tsx
src/stores/: app-store.ts  clipboard-store.ts  dashboard-store.ts  installed-apps-store.ts  plugin-store.ts  quicklink-store.ts  search-store.ts  settings-store.ts  snippet-store.ts  suggestion-usage-store.ts
(+28 files in other folders)
